[metadata]
name = stactools-naip
version = attr: stactools.naip.__version__
description = PROVIDE DESCRIPTION HERE
long_description = file: README.md
long_description_content_type = text/markdown
author = stac-utils
author_email = stac@radiant.earth
url = https://github.com/stactools-naips/stactools-naip
project_urls =
    Documentation = https://stactools-naip.readthedocs.io/en/latest/
    Issues = https://github.com/stactools-naips/stactools-naip/issues
keywords =
    stactools
    pystac
    catalog
    STAC
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.8
package_dir =
    =src
packages = find_namespace:
install_requires =
    stactools >= 0.4

[options.packages.find]
where = src
